--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@
 
 # The goal of this workflow is to merge the remote branch into the Epitech remote, but only if the tests pass.
 
-name: "Push to remote"
+name: "Check Tests"
 on: push
 
 jobs:
@@ -68,9 +68,6 @@ jobs:
             $SUDO ldconfig
             echo "all good."
 
-      - name: Check coding style
-        run: "pip install websocket-client && python './.github/c_checker.py' --hard"
-
       - name: Check if it compiles
         shell: bash
         run: |
@@ -82,11 +79,3 @@ jobs:
 
       - name: Run tests
         run: "make tests_run"
-
-      - name: Push to Epitech
-        uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url:
-            git@github.com:EpitechPromo2026/B-NWP-400-LIL-4-1-myteams-quentin.desmettre.git
-          ssh_private_key:
-            ${{ secrets.SSH_PRIVATE_KEY }}
